again updated color theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   --color-secondary-alt: #FFF6F4;
   --color-tertiary: #bd1968;
   --color-tertiary-2: #7152E9;
-  --color-dark: #231F40;
+  --color-dark: #4f0428;
   --color-body: #6F6B80;
   --color-heading: #231F40;
   --color-white: #ffffff;
