--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12502,7 +12502,7 @@ Gallery Item
     .edu-gallery-grid-item .edu-gallery-grid img {
       border-radius: 5px; }
     .edu-gallery-grid-item .edu-gallery-grid::before {
-      background: linear-gradient(180deg, rgba(82, 95, 225, 0.3) 10.75%, #525fe1 85%);
+      background: linear-gradient(180deg, rgba(156, 24, 86, 0.3) 10.75%, #9c1856 85%);
       border-radius: 5px;
       position: absolute;
       content: "";
