--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*-- Variables --*/
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&family=Montserrat:ital,wght@0,500;0,600;0,700&display=swap');
 :root {
   --color-primary: #9c1856;
   --color-secondary: #82194a;
@@ -53,8 +53,8 @@
   --transition: 0.3s;
   --transition-2: 0.7s;
   --transition-transform: transform .65s cubic-bezier(.23,1,.32,1);
-  --font-primary: 'Urbanist', sans-serif;
-  --font-secondary: 'Urbanist', sans-serif;
+  --font-primary: 'Open Sans', sans-serif;     /* Body */
+  --font-secondary: 'Montserrat', sans-serif; /* Headings */
   --font-awesome: 'Font Awesome 5 Pro';
   --font-size-b1: 18px;
   --font-size-b2: 16px;
@@ -111,6 +111,14 @@ audio:not([controls]) {
 
 [hidden] {
   display: none; }
+
+input,
+textarea,
+select {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
 
 a {
   color: var(--color-heading);
@@ -6105,7 +6113,7 @@ body.sal-disabled [data-sal|='flip'] {
   display: flex;
   margin: 0;
   padding: 0;
-  justify-content: center;
+  justify-content: space-evenly;
   /* flex-wrap: wrap;  */
 }
   .mainmenu-nav .mainmenu > li > a {
